Fixed an issue with mobile menu overlapped by header

--- a/src/sass/imports/base/_helpers.scss
+++ b/src/sass/imports/base/_helpers.scss
@@ -467,7 +467,7 @@
   position: sticky;
   top: 0;
   background: white;
-  z-index: 999;
+  z-index: 998;
 }
 
 .sticky-header-shadow {
